# feature-hedging-paper

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
experiments/: train_btk_balanced_4x_matryoshka_saes.py  train_gemma_hedging_eval_btk_saes_for_case_study.py  train_gemma_hedging_eval_btk_saes_for_l0.py  train_gemma_hedging_eval_btk_saes_for_layer.py  train_gemma_hedging_eval_btk_saes_for_nlatents.py  train_gemma_hedging_eval_btk_saes_for_width.py  train_gemma_hedging_eval_saes_for_layer.py  train_gemma_hedging_eval_saes_for_width.py  train_hedging_eval_btk_saes_for_layer.py  train_hedging_eval_saes_for_layer.py  train_l12_hedging_eval_btk_saes_for_case_study.py  train_l12_hedging_eval_btk_saes_for_l0.py  train_l12_hedging_eval_btk_saes_for_nlatents.py  train_l12_hedging_eval_btk_saes_for_width.py  train_l12_hedging_eval_saes_for_l0.py  train_l12_hedging_eval_saes_for_width.py  train_llama_hedging_eval_btk_saes_for_l0.py  train_llama_hedging_eval_btk_saes_for_layer.py  train_llama_hedging_eval_btk_saes_for_width.py  train_llama_hedging_eval_saes_for_l0.py  train_llama_hedging_eval_saes_for_layer.py  train_llama_hedging_eval_saes_for_width.py
hedging_paper/: build_sae_dashboard.py  loss_curves.py  train_sae.py  util.py
hedging_paper/evals/: absorption_eval.py  autointerp_eval.py  eval.py  hedging_eval.py  pos_sparse_probing_eval.py  run_all_evals.py  scr_eval.py  (+3 more)
notebooks/: balancing_hedging_and_absorption.ipynb  single_latent_hedging_plots.ipynb
tests/: conftest.py  helpers.py  test_build_sae_dashboard.py  test_train_sae.py  test_util.py
(+31 files in other folders)
