[tool.poetry]
name = "hedging-paper"
version = "0.1.0"
description = "Hedging Paper"
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
sae-dashboard = { git = "https://github.com/chanind/SAEDashboard.git", branch = "memory-fixes" }
python = "^3.10"
sae-lens = "^5.10.2"
transformer-lens = "^2.11.0"
jsonschema = "^4.23.0"
plotly = "^5.24.1"
simple-parsing = "^0.1.6"
names-generator = "^0.2.0"
dataclasses-json = "^0.6.7"
fire = "^0.7.0"
sae-bench = "0.4.1"
schedulefree = "^1.4"
nltk = "^3.9.1"
transformers = "4.51.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tueplots = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.0"
pyright = "1.1.394"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
syrupy = "^4.8.1"
dictionary-learning = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["dist", "docs", "*.ipynb"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
